# static_vector

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile.in  GENERATOR_TEMPLATE_EXPLANATION.md  INSTALL.md  LEN_STRING_ADAPTER_EXAMPLE.md  README.md  STRING_CLASSES_OVERVIEW.md  TOOLS.md  static_vector-config.cmake.in  static_vector.benchmark.cpp  static_vector.h  static_vector.hxx  static_vector.unittest.cpp  static_vector_adapter.unittest.cxx  sv_demo.cpp
.github/workflows/: cmake-multi-platform.yml
benchmark/: skl_string.h  sort.benchmark.cpp  static_vector.benchmark.cpp
examples/: base_usage.cpp  coroutine.cpp  range-based-for-loop.cpp  standard-algorithm-functions.cpp  static_string.cpp  string_demo.cpp  sv_demo.cpp  tlv_array_base_usage.cpp  tree_demo.cpp
include/: bound_check.hxx  co_generator.hxx  concepts.hxx  len_string.hxx  loremipsum.hxx  mac_address.hxx  platform.hxx  pretty_printer.hxx  sort.hxx  static_avl_tree.hxx  static_string.hxx  static_vector.hxx  string_manipulations.hxx  string_manipulations_ext.hxx  system_handler.hxx  text_file_reader.hxx  tlv_vector.hxx
tests/: len_string.unittest.cxx  sort.unittest.cxx  static_avl_tree.unittest.cxx  static_string.unittest.cxx  static_vector.unittest.cpp  static_vector.unittest.cxx  static_vector_adapter.unittest.cxx  string_manipulations.unittest.cxx  string_manipulations_ext.unittest.cxx  text_file_reader.unittest.cxx
tools/: pretty_static_string.py  pretty_static_vector.py
